--- a/views/expertRegistration/login.jade
+++ b/views/expertRegistration/login.jade
@@ -20,6 +20,7 @@ block content
                 .form-group
                     .controls
                         input.btn-primary.btn(value='Login', type='submit')
+                        a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
                         a.btn.btn-link(href=MemberRegistrationUrls.register()) Create an account
             form(role='form', action='/expert/login/linkedin')
                 .form-group
