--- a/views/dashboard/integrationCoupons.jade
+++ b/views/dashboard/integrationCoupons.jade
@@ -1,108 +1,103 @@
-include header
+extends  header
 include ../scriptsAndStyles
 title User Management - #{integration.title}
-.container-fluid
+block content
+    .navbar.navbar-default
+        .container
+            a.navbar-brand(href=DashboardUrls.integrations()) Back
+            .collapse.navbar-collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href=DashboardUrls.integrationMembers(integration.id)) Members
+                    li.active
+                        a(href=DashboardUrls.integrationCoupons(integration.id)) Coupons
     .row-fluid
-        .col-md-2
-        .col-md-8
-            .navbar.navbar-default
-                .container
-                    a.navbar-brand(href=DashboardUrls.integrations()) Back
-                    .collapse.navbar-collapse
-                        ul.nav.navbar-nav
-                            li
-                                a(href=DashboardUrls.integrationMembers(integration.id)) Members
-                            li.active
-                                a(href=DashboardUrls.integrationCoupons(integration.id)) Coupons
-            .row-fluid
-                .pull-right
-                    .btn-primary.btn.save(data-toggle='modal', href='#couponDetails')
-                        i.icon-plus.icon-white
-                        | &nbsp;Create Coupon
-            .clearfix
-            if coupons && coupons.length != 0
-                table.table-hover.table.table-bordered#users
-                    thead
-                        tr
-                            th.col-md-1 Code
-                            th.col-md-2 Expert
-                            th.col-md-2 Expires
-                            th.col-md-1 Usage
-                            th.col-md-1 Discount
+        .pull-right
+            .btn-primary.btn.save(data-toggle='modal', href='#couponDetails')
+                i.icon-plus.icon-white
+                | &nbsp;Create Coupon
+    .clearfix
+    if coupons && coupons.length != 0
+        table.table-hover.table.table-bordered#users
+            thead
+                tr
+                    th.col-md-1 Code
+                    th.col-md-2 Expert
+                    th.col-md-2 Expires
+                    th.col-md-1 Usage
+                    th.col-md-1 Discount
 
-                    tbody
-                        each coupon in coupons
-                            - expert = coupon['expert'] ? coupon['expert'][0] : null
-                            - user = expert && expert['user'] ? expert['user'][0] : null
-                            tr(style='cursor: pointer;', data-id=coupon.id, data-toggle='modal', href='#couponDetails')
-                                td(style='text-transform: uppercase;')= coupon.code
-                                td= expert && coupon.expert_id == expert.id && expert.user_id == user.id ? formatName(user.first_name, user.last_name, user.title) : 'All'
-                                td= coupon.expiry_time != null ? formatDate(coupon.expiry_time) : 'Never'
-                                td #{coupon.num_used} / #{coupon.max_coupons || '∞'}
-                                td= formatMoney(coupon.discount_amount, coupon.discount_unit)
-                                    br
-                                    small #{coupon.waive_network_charges ? 'Network charges also waived' : ''}
-            else
-                    .text-center
-                        label No coupons created yet
-        .col-md-2
+            tbody
+                each coupon in coupons
+                    - expert = coupon['expert'] ? coupon['expert'][0] : null
+                    - user = expert && expert['user'] ? expert['user'][0] : null
+                    tr(style='cursor: pointer;', data-id=coupon.id, data-toggle='modal', href='#couponDetails')
+                        td(style='text-transform: uppercase;')= coupon.code
+                        td= expert && coupon.expert_id == expert.id && expert.user_id == user.id ? formatName(user.first_name, user.last_name, user.title) : 'All'
+                        td= coupon.expiry_time != null ? formatDate(coupon.expiry_time) : 'Never'
+                        td #{coupon.num_used} / #{coupon.max_coupons || '∞'}
+                        td= formatMoney(coupon.discount_amount, coupon.discount_unit)
+                            br
+                            small #{coupon.waive_network_charges ? 'Network charges also waived' : ''}
+    else
+            .text-center
+                label No coupons created yet
 
-#couponDetails.modal
-    .modal-dialog
-        .modal-content
-            .modal-header
-                .close(data-dismiss='modal', aria-hidden='true') x
-                h4.modal-title Coupon
-            form
-                .modal-body
-                    .row
-                        .form-group.col-md-6
-                            label.control-label(for='code') Code
-                            input.form-control#code(type='text', name='code', data-toggle="tooltip", data-placement="bottom", style='text-transform: uppercase;')
-                        .form-group.col-md-6
-                            label.control-label(for='code')
-                                | Apply to Expert&nbsp;&nbsp;
-                                .fa.fa-question-circle(style='cursor: pointer', data-toggle="tooltip", data-placement="right", title='Select the expert to whom this coupon applies')
-                            select#expert_id(type='text', name='expert_id')
-                                option(value=0) All
-                                if members
-                                    for member in members
-                                        option(value=member.id)= formatName(member.user.first_name, member.user.last_name, member.user.title)
-                    hr
-                    .row
-                        .form-group.col-md-4
-                            label.control-label(for='expiry_time') Expires On
-                            input.form-control#expiry(type='text', name='expiry_time', data-toggle="tooltip", data-placement="bottom")
-                        .form-group.col-md-4
-                            label.control-label(for='max_coupons') Total coupons
-                            input.form-control(type='text', name='max_coupons', placeholder='0 = unlimited', data-toggle="tooltip", data-placement="bottom")#max_coupons
-                        .form-group.col-md-4
-                            label.control-label(for='num_used', data-toggle="tooltip", data-placement="bottom") Coupons Used
-                            .form-control-static#num_used -
-                    hr
-                    .row
-                        .form-group.col-md-6
-                            label.control-label Discount
-                            .input-group
-                                input.form-control#discount_amount(type='text', name='expiry', data-toggle="tooltip", data-placement="bottom")
-                                .input-group-btn
-                                    select#discount_unit(data-width='auto')
-                                        option(value='1') Rs.
-                                        option(value='2') $
-                                        option(value='3') %
-                                        option(value='4') Points
-                        .form-group
-                            label Options
-                            .input-group
-                                label.in
-                                    input(type='checkbox')#waive_network_charges
-                                    label(style='font-weight: normal;') &nbsp;Waive network charges
-                .modal-footer
-                    button.btn.btn-default(data-dismiss='modal') Close
-                    input.btn.btn-primary#submit(type='submit', value='Save')
-include footer
-script.
-    var integrationId = !{integration.id};
-    var coupons = !{JSON.stringify(coupons)};
+    #couponDetails.modal
+        .modal-dialog
+            .modal-content
+                .modal-header
+                    .close(data-dismiss='modal', aria-hidden='true') x
+                    h4.modal-title Coupon
+                form
+                    .modal-body(style="overflow: visible;")
+                        .row
+                            .form-group.col-md-6
+                                label.control-label(for='code') Code
+                                input.form-control#code(type='text', name='code', data-toggle="tooltip", data-placement="bottom", style='text-transform: uppercase;')
+                            .form-group.col-md-6
+                                label.control-label(for='code')
+                                    | Apply to Expert&nbsp;&nbsp;
+                                    .fa.fa-question-circle(style='cursor: pointer', data-toggle="tooltip", data-placement="right", title='Select the expert to whom this coupon applies')
+                                select#expert_id(type='text', name='expert_id')
+                                    option(value=0) All
+                                    if members
+                                        for member in members
+                                            option(value=member.id)= formatName(member.user.first_name, member.user.last_name, member.user.title)
+                        hr
+                        .row
+                            .form-group.col-md-4
+                                label.control-label(for='expiry_time') Expires On
+                                input.form-control#expiry(type='text', name='expiry_time', data-toggle="tooltip", data-placement="bottom")
+                            .form-group.col-md-4
+                                label.control-label(for='max_coupons') Total coupons
+                                input.form-control(type='text', name='max_coupons', placeholder='0 = unlimited', data-toggle="tooltip", data-placement="bottom")#max_coupons
+                            .form-group.col-md-4
+                                label.control-label(for='num_used', data-toggle="tooltip", data-placement="bottom") Coupons Used
+                                .form-control-static#num_used -
+                        hr
+                        .row
+                            .form-group.col-md-6
+                                label.control-label Discount
+                                .input-group
+                                    input.form-control#discount_amount(type='text', name='expiry', data-toggle="tooltip", data-placement="bottom")
+                                    .input-group-btn
+                                        select#discount_unit(data-width='auto')
+                                            option(value='1') Rs.
+                                            option(value='2') $
+                                            option(value='3') %
+                                            option(value='4') Points
+                            .form-group.col-md-6
+                                label.control-label Applies to
+                                select.form-control#(data-width='auto')
+                                    - for couponType,id in CouponType
+                                        option(value=id)= couponType
+                    .modal-footer
+                        button.btn.btn-default(data-dismiss='modal') Close
+                        input.btn.btn-primary#submit(type='submit', value='Save')
+    include footer
+    script.
+        var integrationId = '!{integration.id}';
+        var coupons = !{coupons};
 
-script(src='/js/app/dashboard/integrationCoupons.js')
+    script(src='/js/app/dashboard/integrationCoupons.js')
