UI changes to member profile screen Login bug fixed for dashboard

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,11 @@
 .controls textarea + .btn {
     margin-left: 10px;
 }
+
+.pull-right a + a {
+    margin-left: 5px;
+}
+
+.panel-body button + button {
+    margin-left: 5px;
+}
