--- a/views/scriptsAndStyles.jade
+++ b/views/scriptsAndStyles.jade
@@ -1,2 +1,3 @@
 script(src='/js/lib/combined.js')
 link(rel='stylesheet', href='/css/combined.min.css')
+link(rel='stylesheet', href='/css/style.css')
